[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/training/RecordingEntry.gd" type="Script" id=1]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="RecordingEntry" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -701.0
margin_bottom = -574.0
rect_min_size = Vector2( 325, 26 )
script = ExtResource( 1 )

[node name="recordingId" type="Label" parent="."]
margin_top = 2.0
margin_right = 69.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Recording 1"

[node name="playButton" type="Button" parent="."]
margin_left = 103.591
margin_top = -0.892868
margin_right = 145.591
margin_bottom = 23.1071
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="stopButton" type="Button" parent="."]
margin_left = 103.591
margin_top = -0.892868
margin_right = 145.591
margin_bottom = 23.1071
custom_fonts/font = SubResource( 1 )
text = "Stop"

[node name="removeButton" type="Button" parent="."]
margin_left = 151.591
margin_top = -0.892868
margin_right = 193.591
margin_bottom = 23.1071
custom_fonts/font = SubResource( 1 )
text = "Erase"

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 370.641
margin_top = -1.32685
margin_right = 394.641
margin_bottom = 22.6731

[node name="reversalToggleLabel" type="Label" parent="."]
margin_left = 207.0
margin_top = 2.0
margin_right = 362.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Enable Reversal Action"
